
Tasty new goodies thanks to Graphviz.
----------------------------------------------------------------------
Fri Nov 21 18:40:52 2003                        Michael Jennings (mej)

Added more docs to obj.c.  I need to go back and be more verbose on
some things, though.

These can be viewed online at http://www.eterm.org/libast/ for those
who'd like to get a sneak peak at them.  Please report any obvious
errors, typos, etc.  Those with developer access, feel free to
contribute or correct any errors or inconsistencies you find.
----------------------------------------------------------------------
Sun Nov 23 15:57:55 2003                        Michael Jennings (mej)

Cleanups required by doxygen 1.3.x.
----------------------------------------------------------------------
Wed Nov 26 17:18:20 2003                        Michael Jennings (mej)

Added sysdefs.h so that client programs who don't employ some/all of
the AST_* m4 macros can still get all the #define's they need for the
auto* stuff.
----------------------------------------------------------------------
Wed Nov 26 18:49:32 2003                        Michael Jennings (mej)

Oops.  Forgot the most important part! :-P
----------------------------------------------------------------------
Wed Nov 26 21:07:16 2003                        Michael Jennings (mej)

Working on cleaning up namespace issues.
----------------------------------------------------------------------
Thu Nov 27 00:22:16 2003                        Michael Jennings (mej)

More namespace cleaning.  Just one more set to go.
----------------------------------------------------------------------
Tue Dec  9 21:53:50 2003                        Michael Jennings (mej)

Add --libs flag to libast-config.
----------------------------------------------------------------------
Fri Dec 12 22:01:42 2003                        Michael Jennings (mej)

Finished up namespace cleanups.
----------------------------------------------------------------------