@@ -1,7 +1,7 @@
 <hr width="100%" size="2" />
 <p>
     <small>
-        Copyright &copy;1997-2003, Michael Jennings &lt;<i>web@eterm.org</i>&gt;
+        Copyright &copy;1997-2004, Michael Jennings &lt;<i>web@eterm.org</i>&gt;
     </small>
 </p>
 </body>
